# jichuangsai30tai

./: .gitignore  CMakeLists.txt  README.md  STATUS.md
aim_follow_control/: CMakeLists.txt
aim_follow_control/include/: aim_follow_controller.hpp
docs/: ALGORITHM_DESIGN.md  BOARD_ACCEPTANCE_RUNBOOK.md  BUILD_FULL_PROJECT_ON_ANOTHER_PC_CN.md  DETPOST_OPERATOR_LEARNING_NOTES_CN.md  SETUP_ANOTHER_PC_CN.md  TUNING_LOG_TEMPLATE.md  UAV_SUPPLEMENTARY_MATERIALS_CN.md
examples/bytetrack_icraft/: bytetrack.yaml  pyproject.toml
examples/bytetrack_icraft/1_scripts/: 0_infer.py  1_save.py  2_save_infer.py
examples/bytetrack_icraft/2_compile/config/BY/: bytetrack_plin.toml  bytetrack_psin_16.toml  bytetrack_psin_int8.toml  bytetrack_psin_mix.toml
examples/bytetrack_icraft/2_compile/config/ZG/: bytetrack_plin.toml  bytetrack_psin_bf16.toml  bytetrack_psin_fp16.toml  bytetrack_psin_int8.toml  bytetrack_psin_mix.toml  bytetrack_psin_tf32.toml
examples/bytetrack_icraft/2_compile/config/customop/: bytetrack.toml
examples/bytetrack_icraft/3_deploy/: CMakeLists.txt  CMakePresets.json
examples/bytetrack_icraft/3_deploy/cfg/: bytetrack_plin.yaml  bytetrack_psin_BY_16.yaml  bytetrack_psin_BY_int8_demo.yaml  bytetrack_psin_BY_mix_demo.yaml  bytetrack_psin_ZG_bf16.yaml  bytetrack_psin_ZG_fp16.yaml  bytetrack_psin_ZG_int8_demo.yaml  bytetrack_psin_ZG_mix.yaml  bytetrack_psin_ZG_tf32.yaml  bytetrack_test.yaml
examples/bytetrack_icraft/3_deploy/io/: list.txt
examples/bytetrack_icraft/3_deploy/metrics/evaluate/: MOTmetrics.py  readme.md
examples/bytetrack_icraft/3_deploy/metrics/logs/BY_int8/: bytetrack_time.txt
examples/bytetrack_icraft/3_deploy/metrics/logs/BY_mix/: bytetrack_time.txt
examples/bytetrack_icraft/3_deploy/modelzoo_utils/: C++_API_reference.md  NetInfo.hpp  PicPre.hpp  et_device.hpp  icraft_utils.hpp  modelzoo_utils.hpp  readme.md  task_queue.hpp  utils.hpp
examples/bytetrack_icraft/3_deploy/modelzoo_utils/.githooks/: pre-commit  pre-push
examples/bytetrack_icraft/3_deploy/modelzoo_utils/pyrtutils/: Netinfo.py  Python_API_reference.md  analyze_time_utils.py  analyze_time_utils_zg.py  calctime_utils.py  icraft_utils.py  modelzoo_utils.py  pyrt_main_example.py
examples/bytetrack_icraft/3_deploy/modelzoo_utils/pyrtutils/utils/: struct.py  tools.py
examples/bytetrack_icraft/3_deploy/src/: PicPre_bytetrack.hpp  bytetrack_plin.cpp  bytetrack_psin.cpp  bytetrack_psin_test.cpp  det_post.hpp  postprocess_bytetrack.hpp  postprocess_bytetrack_test.hpp
examples/bytetrack_icraft/3_deploy/src/bt_include/: BYTETracker.h
examples/bytetrack_icraft/3_deploy/src/bt_src/: BYTETracker.cpp  utils.cpp
examples/bytetrack_icraft/deploy/ncnn/cpp/include/: BYTETracker.h
examples/bytetrack_icraft/deploy/ncnn/cpp/src/: bytetrack.cpp
examples/bytetrack_icraft/exps/example/mot/: yolox_s_mix_det.py
examples/bytetrack_icraft/yolox/exp/: build.py
examples/plin_autonomous_bicycle_tracking_30tai/: .gitattributes  .gitignore  CMakeLists.txt  README.md  SHA256SUMS.txt  build_30tai.sh  build_cross_3331.sh  run_30tai_3331.sh  start_chassis_tracking_test.sh  start_laser_aim_test.sh  start_tracking_test.sh  start_vision_dryrun.sh  stop_all.sh
examples/plin_autonomous_bicycle_tracking_30tai/aim_follow_control/: ACCEPTANCE_CHECKLIST.md  CMakeLists.txt  README.md
examples/plin_autonomous_bicycle_tracking_30tai/aim_follow_control/include/: aim_follow_controller.hpp
examples/plin_autonomous_bicycle_tracking_30tai/aim_follow_control/src/: aim_follow_controller.cpp
examples/plin_autonomous_bicycle_tracking_30tai/aim_follow_control/test/: aim_follow_controller_test.cpp  aim_follow_synthetic_board_test.cpp
examples/plin_autonomous_bicycle_tracking_30tai/bytetrack/include/: BYTETracker.h  STrack.h  logging.h
examples/plin_autonomous_bicycle_tracking_30tai/bytetrack/src/: BYTETracker.cpp  STrack.cpp  utils.cpp
examples/plin_autonomous_bicycle_tracking_30tai/src/: sdicamera+yolov5+hdmi.cpp
examples/plin_autonomous_bicycle_tracking_30tai/systemd/: plin-autonomous-tracking.service
examples/plin_autonomous_bicycle_tracking_30tai/tools/: boot_autonomous_tracking.sh  calibrate_ir_thresholds.py  deploy_and_start.ps1  install_boot_service.sh  preview_plin_network_frames.py  safe_can_control_client.py  safe_can_control_session.py  safe_tracking_bridge.py  start_autonomous_tracking.sh  stop_all.ps1  stop_autonomous_tracking.sh  stream_plin_hdmi_udma.py  test_safe_tracking_bridge.py  uninstall_boot_service.sh
examples/plin_yolov5_hdmi_integrated/: CMakeLists.txt  README.md  README_FULL_BUILD_CN.md  build_30tai.sh
examples/plin_yolov5_hdmi_integrated/aim_follow_control/: BOARD_INTEGRATION.md
examples/plin_yolov5_hdmi_integrated/aim_follow_control/src/: aim_follow_controller.cpp
examples/plin_yolov5_hdmi_integrated/aim_follow_control/test/: aim_follow_synthetic_board_test.cpp
examples/plin_yolov5_hdmi_integrated/configs/ZG/: sdicamera+yolov5+hdmi.yaml
examples/plin_yolov5_hdmi_integrated/imodel/ZG/: yolov5s_plin_352x640_ZG.json
examples/plin_yolov5_hdmi_integrated/src/: sdicamera+yolov5+hdmi.cpp
examples/plin_yolov5_hdmi_integrated/tools/: analyze_smoke_logs.ps1  analyze_vision_algorithm_logs.ps1  deploy_30tai.ps1  diagnose_30tai_camera_path.ps1  diagnose_30tai_video_input.ps1  probe_30tai_sdi_modes.ps1  run_acceptance_preflight.ps1  run_board_synthetic_control_test.ps1  run_local_aim_follow_checks.ps1
integration/: INTEGRATE_WITH_PLIN_PROJECT.md  PLIN_MAIN_HDMI_DRYRUN_PATCH.md
tools/: analyze_vision_algorithm_logs.ps1  check_30tai_connection.ps1  check_deploy_dry_run.ps1  deploy_30tai.ps1  diagnose_30tai_can_bus.ps1  diagnose_30tai_video_input.ps1  dump_30tai_sdi_registers.ps1  find_30tai_board.ps1  install_full_sdk_deps.ps1  run_acceptance_preflight.ps1  run_board_acceptance.ps1  run_board_readiness_report.ps1  run_board_synthetic_control_test.ps1  run_board_vision_algorithm_test.ps1  run_hdmi_synthetic_demo.ps1  run_local_aim_follow_checks.ps1  run_sdi_input_triage.ps1  sync_to_plin_project.ps1  verify_plin_integration.ps1  write_acceptance_report.ps1
(+7 files in other folders)
