[project]
name = "bytetrack-icraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "cython-bbox>=0.1.5",
    "lap>=0.5.12",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "pycocotools>=2.0.7",
    "pylint>=3.2.7",
    "scipy>=1.10.1",
    "tabulate>=0.9.0",
    "thop>=0.1.1.post2209072238",
    "torch==1.9.0",
    "torchvision==0.10.0",
]
